# hteamx

./: Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
assets/css/: main.css
src/: main.rs
src/api/: mod.rs
src/fragments/: mod.rs
src/routes/: confirm.rs  mod.rs
src/services/: mod.rs
templates/: add.html  confirm.html  confirmed.html  index.html
