[package]
name = "hteamx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["form", "cookie"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15"
time = "0.3.36"
